<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/white1"
        app:cardElevation="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/detection"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"/>

            <TextView
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:textColor="@color/green"
                android:background="@color/white1"
                android:text="@string/analyze"
                android:layout_gravity="center"
                android:textSize="15sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/white1"
        app:cardElevation="10dp"
        android:layout_below="@id/card1"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:src="@drawable/details" />

            <TextView
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@color/white1"
                android:text="@string/type"
                android:gravity="center"
                android:textColor="@color/green"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/white1"
        app:cardElevation="10dp"
        android:layout_below="@id/card2"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="12dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_baseline_save_24" />

            <TextView
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button2"
                android:layout_centerHorizontal="true"
                android:textColor="@color/green"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/white1"
                android:text="Save Data"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/white1"
        app:cardElevation="10dp"
        android:layout_below="@id/card3"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:src="@drawable/about" />

            <TextView
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/button3"
                android:textColor="@color/green"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/about"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card5"
        android:layout_width="300dp"
        android:layout_height="600dp"
        android:backgroundTint="@color/white1"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="50dp"
        android:clipToPadding="false"
        android:layout_marginEnd="-50dp"
        android:layout_marginTop="-30dp"
        android:layout_toRightOf="@id/card1"
        app:cardElevation="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/back1" />




    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="cursive"
        android:text="@string/app"
        android:textColor="@color/green"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</RelativeLayout>
